variance vertical alignment fix

--- a/src/app/modules/project-hub/project-board/schedule-view-bulk-edit/schedule-view-bulk-edit.component.scss
+++ b/src/app/modules/project-hub/project-board/schedule-view-bulk-edit/schedule-view-bulk-edit.component.scss
@@ -2,7 +2,9 @@
     font-size: 16px;
 }
 .variance {
-    position: absolute;
+    //position: absolute;
     text-align: center;
   right: 58%;
+  //vertical-align: baseline;
+
 }
